# MahabharataKosha

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  stagged_commit.txt
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  3-development-task.yml  config.yml  task.md
.github/instructions/: commit.instructions.md
.github/workflows/: gemini-issue-scheduled-triage.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2869d2bdb473_initial_migration.py  4c0d2b053e47_initial_migration.py  5dbe3be3e277_enrich_shloka_model.py  ddead149437b_enrich_shloka_model.py
backend/app/: main.py
backend/app/models/: __init__.py  adhyaya.py  base.py  feedback.py  parva.py  shloka.py
frontend/: Dockerfile  eslint.config.js  index.html  package.json  pnpm-lock.yaml
